# QmlCropImage

./: CMakeLists.txt  CentralManager.cpp  CentralManager.h  CropHandler.cpp  CropHandler.h  Main.qml  QmlCropImageTool.qrc  README.md  main.cpp
Components/: BottomPanel.qml  SelectableArea.qml  qmldir
